envoy/httpmanager/http_cors.yaml
# 这是一个过滤器，用于根据路由或虚拟主机设置处理跨域资源共享请求。有关标题的含义，请参阅以下页面。

# https://developer.mozilla.org/en-US/docs/Web/HTTP/CORS

# 更改头部信息 对头部 进行更改

admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 8081
      name: listener_http
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: auto
                stat_prefix: ingress_http
                http_filters:
                  - name: envoy.filters.http.cors
                  - name: envoy.filters.http.router
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: www2
                      domains:
                        - '*'
                      routes:
                        - match:
                            prefix: /
                          route:
                            cluster: helloworld_v1
                            cors:
                              allow_methods: GET, PUT, DELETE, POST, OPTIONS
                              allow_headers: Content-Type, Authenticate
#                              allow_origin_string_match:
#                                safe_regex:
#                                  google_re2: {}
#                                  regex:  ".*"

  clusters:
    - name: helloworld_v1
      connect_timeout: 15s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      #http2_protocol_options: {}
      load_assignment:
        cluster_name: helloworld_v1
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 8080
