envoy/httpmanager/http_header_manipulation.yaml
# 更改头部信息 对头部 进行更改

admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 8081
      name: listener_http
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: auto
                stat_prefix: ingress_http
                http_filters:
                  - name: envoy.filters.http.router
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: www2
                      domains:
                        - '*'
                      routes:
                       - match:
                          prefix: /
                         route:
                           cluster: helloworld_v1
                         request_headers_to_add:
                         - header:
                             key: "x-request-start"
                             value: "%START_TIME(%s.%3f)%"
                           append: true
                         response_headers_to_add:
                         - header:
                             key: "x-request-start"
                             value: "%START_TIME(%s.%3f)%"
                           append: true
                         response_headers_to_remove:
                         - date
  clusters:
    - name: helloworld_v1
      connect_timeout: 15s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      #http2_protocol_options: {}
      load_assignment:
        cluster_name: helloworld_v1
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 8080
