envoy/httpmanager/traffik_splitting.yaml
# 流量分配

admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 8081
    name: listener_http
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: auto
          stat_prefix: ingress_http
          http_filters:
            - name: envoy.filters.http.router
          route_config:
            name: local_route
            virtual_hosts:
              - name: www2
                domains:
                - '*'
                routes:
                  # - match: 
                  #    prefix: /
                  #   route:
                  #     cluster: helloworld_v1
                  - match:
                      prefix: /
                    route:
                      weighted_clusters:
                        runtime_key_prefix: routing.traffic_split.helloworld
                        clusters:
                          - name: helloworld_v1
                            weight: 50
                          - name: helloworld_v2
                            weight: 50
  clusters:
  - name: helloworld_v1
    connect_timeout: 15s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    #http2_protocol_options: {}
    load_assignment: 
      cluster_name: helloworld_v1
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 8080
  - name: helloworld_v2
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    http2_protocol_options: {}
    load_assignment: 
      cluster_name: helloworld_v2
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 8084
